# ChangeLog for sci-libs/openfoam-solvers
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  26 Jul 2008; Thomas Anderson <gentoofan23@gentoo.org>
  openfoam-solvers-1.5.ebuild:
  Fix unnecessary quoting, and add some more

  22 Jul 2008; Oliver Borm (boroli) <oli.borm@web.de>
  +openfoam-solvers-1.5.ebuild, +files/OpenFOAM-1.5-compile.patch:
  Version bump to 1.5

  30 Mar 2008; Thomas Sachau (Tommy[D]) tommy@gentoo.org
  -openfoam-solvers-1.4.1_p20080118.ebuild,
  -files/openfoam-solvers-1.4.1_p20080118.patch,
  -files/openfoam-solvers-compile-1.4.1_p20080118.patch:
  Drop old version

  28 Mar 2008; Oliver Borm (boroli) <oli.borm@web.de>
  +openfoam-solvers-1.4.1_p20080328.ebuild,
  +files/openfoam-solvers-1.4.1_p20080328.patch,
  +files/openfoam-solvers-compile-1.4.1_p20080328.patch:
  Some bug fixes.

  29 Jan 2008; Oliver Borm (boroli) <oli.borm@web.de>
  +files/openfoam-solvers-1.4.1_p20080118.patch,
  +files/openfoam-solvers-compile-1.4.1_p20080118.patch, +metadata.xml,
  +openfoam-solvers-1.4.1_p20080118.ebuild:
  New Ebuild for the OpenFOAM solvers
