@@ -4,6 +4,6 @@ AUX openfoam-solvers-compile-1.4.1_p20080328.patch 996 RMD160 0debfeb112bed54731
 DIST OpenFOAM-1.4.1.General.gtgz 148526808 RMD160 e25d8bdfa63f15eeeb7b9f1cef09cc26fb7bef74 SHA1 56bbbf5b33c49d08cda35088a65b24d7dc59014f SHA256 c765b36639b42c737bc9ba1ac13c0f66efe20ee4a9f71a6ef987e86ebd50da28
 DIST OpenFOAM-1.5.General.gtgz 117334661 RMD160 bccaa9f8f99d31aa6c791d40b30dd9ad4f534041 SHA1 3577f562dc1f54bb32e1e0ef43f979418212c2f7 SHA256 d4cba2d9475523a53cea80b8d39da70d12bfffb9f46e2d1442946ba4a23efd31
 EBUILD openfoam-solvers-1.4.1_p20080328.ebuild 2623 RMD160 8750fa3d6041cb2b436235d13b10001e6bfaa1a9 SHA1 b0e98618cd25792f4b00e775c456ea96587e33f1 SHA256 139e000ade2545299e7f005f48b8366ad1bc86c074ed0176fdceb0f95395caea
-EBUILD openfoam-solvers-1.5.ebuild 1758 RMD160 f76379701d4760c151f0f1d4d36d6839cb0f04e4 SHA1 e8651b0b06e6423d24fd28d7b6ae69bc79de1e32 SHA256 df1544cbb13194c0ffd29e3363b0427efa06ec2065e59e650c3efbef07dd87f8
-MISC ChangeLog 1111 RMD160 004d24e099aba620fa43a01529e74636f614954c SHA1 0c008e73aeb96d0bfa0e95f143bfa3680c2307f0 SHA256 bca7a31300e762f0db309dc9fa39d433aa005d2192de8bc046509ccd22a78b21
+EBUILD openfoam-solvers-1.5.ebuild 1796 RMD160 781c0a0e5618616d0e151bbb46a04a1438548940 SHA1 b0653e2a33292e0316fb099a72fe58d59305a7ab SHA256 662ab87228b4ba2de73a690deb69ed727659ab579638edfde3cbde24a55d3b7e
+MISC ChangeLog 1246 RMD160 4b45de5c109c121ae4a09c8265c6d00078af3a05 SHA1 048c2389b568d81bb8414ba461072ce938539fda SHA256 bdd1e0e0f47e8e963e9dfba7a7aeef12901676ca774df44bee022a3b795f8027
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
