@@ -22,7 +22,6 @@ DEPEND="!sci-libs/openfoam
 	>=sci-libs/openfoam-kernel-${MY_PV}"
 
 S=${WORKDIR}/${MY_P}
-INSDIR=/usr/$(get_libdir)/${MY_PN}/${MY_P}
 
 pkg_setup() {
 	if ! version_is_at_least 4.1 $(gcc-version) ; then
@@ -34,27 +33,24 @@ src_unpack() {
 	ln -s "${DISTDIR}"/${MY_P}.General.gtgz ${MY_P}.General.tgz
 	unpack ./${MY_P}.General.tgz
 
-	cd "${S}"
+	cd ${S}
 	epatch "${FILESDIR}"/${MY_P}-compile.patch
 }
 
 src_compile() {
-	cp -a ${INSDIR}/etc/{bashrc,settings.sh} etc/. || "cannot copy bashrc"
+	cp -a /usr/$(get_libdir)/${MY_PN}/${MY_P}/etc/{bashrc,settings.sh} etc/. || "cannot copy bashrc"
 
 	# This is a hack, due to the meta ebuild:
-	sed -i -e "s|FOAM_LIB=\$WM_PROJECT_DIR/lib|FOAM_LIB=${INSDIR}/lib|"	\
+	sed -i -e "s|FOAM_LIB=\$WM_PROJECT_DIR/lib|FOAM_LIB=/usr/$(get_libdir)/${MY_PN}/${MY_P}/lib|"	\
 		-e "s|FOAM_LIBBIN=\$FOAM_LIB|FOAM_LIBBIN=\$WM_PROJECT_DIR/lib|"	\
 		-e "s|_foamAddLib \$FOAM_USER_LIBBIN|_foamAddLib \$FOAM_LIB|"	\
 		etc/settings.sh || die "could not replace paths"
 
-	sed -i -e "s|-L\$(LIB_WM_OPTIONS_DIR)|-L\$(LIB_WM_OPTIONS_DIR) -L${INSDIR}/lib|" \
+	sed -i -e "s|-L\$(LIB_WM_OPTIONS_DIR)|-L\$(LIB_WM_OPTIONS_DIR) -L/usr/$(get_libdir)/${MY_PN}/${MY_P}/lib|" \
 		wmake/Makefile || die "could not replace search paths"
 
 	export FOAM_INST_DIR="${WORKDIR}"
 	source etc/bashrc
-
-	cd wmake/src
-	make
 
 	cd applications/solvers
 	wmake all || die "could not build OpenFOAM utilities"
@@ -62,7 +58,7 @@ src_compile() {
 
 src_install() {
 	insopts -m0755
-	insinto ${INSDIR}/applications/bin
+	insinto /usr/$(get_libdir)/${MY_PN}/${MY_P}/applications/bin
 	doins -r applications/bin/*
 
 	insinto /usr/$(get_libdir)/${MY_PN}/${MY_P}/lib
